changes in side bar

--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -28,7 +28,7 @@
 		<!--end::Global Stylesheets Bundle-->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
   </head>
-  <body id="kt_body" data-sidebar="on">
+  <body id="kt_body" data-sidebar="on" class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled aside-enabled aside-fixed aside-primary-disabled aside-secondary-enabled">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src="./assets/plugins/global/plugins.bundle.js"></script>
@@ -48,5 +48,5 @@
 		<script src="./assets/js/custom/documentation/general/datatables/basic.js"></script>
 		<script src="./assets/js/custom/documentation/documentation.js"></script>
 		<!--end::Page Custom Javascript-->
-  </body>
+  </body>    
 </html>
