change header title image and fix date issue

--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -2,51 +2,91 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/Picxls2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-	name="description"
-	content="Web site created using create-react-app"
-    />    
-	<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <base href="/" />
-	<title>Picxls | Admin</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" />
-		<!--end::Fonts-->
-		<!--begin::Global Stylesheets Bundle(used by all pages)-->
-		<link href="./assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
-		<link href="./assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
-		<!--begin::Page Vendor Stylesheets(used by this page)-->
-		<link href="./assets/plugins/custom/datatables/datatables.bundle.css" rel="stylesheet" type="text/css" />
-		<link href="./assets/plugins/custom/prismjs/prismjs.bundle.css" rel="stylesheet" type="text/css" />
-		<!--end::Page Vendor Stylesheets-->
-		<!--begin::Global Stylesheets Bundle(used by all pages)-->
-		<link href="./assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
-		<link href="./assets/css/style.bundle.css" rel="stylesheet" type="text/css" />
-		<!--end::Global Stylesheets Bundle-->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+    <title>Picxls - Admin</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700"
+    />
+    <!--end::Fonts-->
+    <!--begin::Global Stylesheets Bundle(used by all pages)-->
+    <link
+      href="./assets/plugins/global/plugins.bundle.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="./assets/css/style.bundle.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <!--begin::Page Vendor Stylesheets(used by this page)-->
+    <link
+      href="./assets/plugins/custom/datatables/datatables.bundle.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="./assets/plugins/custom/prismjs/prismjs.bundle.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <!--end::Page Vendor Stylesheets-->
+    <!--begin::Global Stylesheets Bundle(used by all pages)-->
+    <link
+      href="./assets/plugins/global/plugins.bundle.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="./assets/css/style.bundle.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <!--end::Global Stylesheets Bundle-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+    />
   </head>
-  <body id="kt_body" data-sidebar="on" class="header-fixed header-tablet-and-mobile-fixed toolbar-enabled aside-enabled aside-fixed aside-primary-disabled aside-secondary-enabled">
+  <body
+    id="kt_body"
+    data-sidebar="on"
+    class="
+      header-fixed header-tablet-and-mobile-fixed
+      toolbar-enabled
+      aside-enabled aside-fixed aside-primary-disabled aside-secondary-enabled
+    "
+  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src="./assets/plugins/global/plugins.bundle.js"></script>
-		<script src="./assets/js/scripts.bundle.js"></script>
-		<!--end::Global Javascript Bundle-->
-		<!--begin::Page Custom Javascript(used by this page)-->
-		<script src="./assets/js/custom/general/login.js"></script>
+    <script src="./assets/js/scripts.bundle.js"></script>
+    <!--end::Global Javascript Bundle-->
+    <!--begin::Page Custom Javascript(used by this page)-->
+    <script src="./assets/js/custom/general/login.js"></script>
     <!--begin::Global Javascript Bundle(used by all pages)-->
-		<script src="./assets//plugins//global/plugins.bundle.js"></script>
-		<script src="./assets/js/scripts.bundle.js"></script>
-		<!--end::Global Javascript Bundle-->
-		<!--begin::Page Vendors Javascript(used by this page)-->
-		<script src="./assets/plugins/custom/datatables/datatables.bundle.js"></script>
-		<script src="./assets/plugins/custom/prismjs/prismjs.bundle.js"></script>
-		<!--end::Page Vendors Javascript-->
-		<!--begin::Page Custom Javascript(used by this page)-->
-		<script src="./assets/js/custom/documentation/general/datatables/basic.js"></script>
-		<script src="./assets/js/custom/documentation/documentation.js"></script>
-		<!--end::Page Custom Javascript-->
-  </body>    
+    <script src="./assets//plugins//global/plugins.bundle.js"></script>
+    <script src="./assets/js/scripts.bundle.js"></script>
+    <!--end::Global Javascript Bundle-->
+    <!--begin::Page Vendors Javascript(used by this page)-->
+    <script src="./assets/plugins/custom/datatables/datatables.bundle.js"></script>
+    <script src="./assets/plugins/custom/prismjs/prismjs.bundle.js"></script>
+    <!--end::Page Vendors Javascript-->
+    <!--begin::Page Custom Javascript(used by this page)-->
+    <script src="./assets/js/custom/documentation/general/datatables/basic.js"></script>
+    <script src="./assets/js/custom/documentation/documentation.js"></script>
+    <!--end::Page Custom Javascript-->
+  </body>
 </html>
